tests/integration/tests/basic_functionality/04_empty_file_input/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_TESTER_EXEC %S/filecheck.check 2>&1 || true) | %FILECHECK_TESTER_EXEC %s
; CHECK: FileCheck error: '-' is empty.
; CHECK: FileCheck command line:  {{.*}}.check{{$}}
